--- a/.env
+++ b/.env
@@ -5,3 +5,7 @@ LOG_LEVEL=info
 
 #DB CONFIGS
 DATABASE_URL=postgresql://neondb_owner:npg_5UwRF8GdhZvK@ep-empty-recipe-ah4xw57t-pooler.c-3.us-east-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require
+
+#Arcjet 
+ARCJET_KEY=ajkey_01kagk8d6xfwhanp812qnndwjp
+
